# Nexternship

./: .env  CNAME  Dockerfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
ConnXt/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
ConnXt/migrations/: 0001_initial.py  0002_alter_studentinfo_student_grade_and_more.py  0002_jobposting_job_date.py  0002_jobposting_user.py  0003_jobposting_job_location_alter_jobposting_job_date.py  0004_jobposting_job_capacity_and_more.py  0005_jobapplication_accepted_jobapplication_rejected.py  0006_alter_jobposting_job_description_and_more.py  0007_studentinfo_student_resume.py  0008_alter_studentinfo_student_resume.py  0009_alter_studentinfo_student_resume.py
ConnXtMain/: asgi.py  settings.py  urls.py  wsgi.py
members/: forms.py  urls.py  views.py
static/css/: Simple-Slider.css  bs-theme-overrides.css
templates/: aboutus.html  base.html  change_password.html  confirm_delete.html  edit_job.html  employer_list.html  employererror.html  employerhome.html  employerinstructions.html  employers.html  index.html  jobedit.html  login.html  profile.html  signup.html  studentdashboard.html  studenterror.html  studentinstructions.html  talent.html
