[tool.poetry]
name = "nexternship"
version = "0.1.0"
description = ""
authors = ["Siddharth Radhakrishnan <siddharth.radh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.8.1"
django = "5.1"
sqlparse = "0.5.1"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
whitenoise = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
